--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="container">
 
 <div class="navbar navbar-inverse">
-	<div class="navbar-inner">
+	<div class="navbar navbar-inverse navbar-fixed-top">
             <ul class="nav">
 		<li>
           	<a href="index.html"><b>LWSD</b></a>
