--- a/chulavista.html
+++ b/chulavista.html
@@ -41,6 +41,35 @@
   <h1>Chula Vista</h1>
 
 
+	<div class="span10 offset1">
+            <div class="statistics">
+              <div class="span12">
+                <div class="linediv-c">
+                  <h2>Overall Regional Score Card</h2>
+                </div>
+              </div>
+              <div class="span4">
+                <!-- linediv-l and linediv-r give dividing lines that look
+                different in horizontal and vertical layouts, illustrating
+                media queries. -->
+                <div class="linediv-l">
+                <h3>Deaths</h3> <p>40 of 42</p>
+                </div>
+              </div>
+              <div class="span4">
+                <div class="linediv-c">
+                  <h3>Hospitalizations</h3> <p>41 of 42</p>
+                </div>
+              </div>
+              <div class="span3">
+                <div class="linediv-r">
+                <h3>Emergency Room</h3> <p>42 of 42</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
           <a href="page.html"><img class="img-polaroid" src="http://placehold.it/480x300"></a>
