--- a/chulavista.html
+++ b/chulavista.html
@@ -41,6 +41,8 @@
   <h1>Chula Vista</h1>
 
 
+
+<div class="span4 actions">
 	<div class="span10 offset1">
             <div class="statistics">
               <div class="span12">
@@ -68,7 +70,7 @@
               </div>
             </div>
           </div>
-
+        </div>
 
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
