scorecard title corrected

--- a/chulavista.html
+++ b/chulavista.html
@@ -45,7 +45,7 @@
 <div class="span5 actions">
 	<div class="span4">
             <div class="statistics">
-              <div class="span4 offset1">
+              <div class="span4">
                   <h2>Overall Regional Score Card</h2>
               </div>
               <div class="span4 offset1">
