--- a/chulavista.html
+++ b/chulavista.html
@@ -48,16 +48,16 @@
               <div class="span4">
                   <h2>Overall Regional Score Card</h2>
               </div>
-              <div class="span4 offset1">
+              <div class="span4">
                 <!-- linediv-l and linediv-r give dividing lines that look
                 different in horizontal and vertical layouts, illustrating
                 media queries. -->
                 <h3>Deaths</h3> <p>40 of 42</p>
               </div>
-              <div class="span4 offset1">
+              <div class="span4">
                   <h3>Hospitalizations</h3> <p>41 of 42</p>
               </div>
-              <div class="span4 offset1">
+              <div class="span4">
                 <h3>Emergency Room</h3> <p>42 of 42</p>
               </div>
             </div>
