--- a/chulavista.html
+++ b/chulavista.html
@@ -66,8 +66,8 @@
         </div>
 
       <div class="row-fluid section1">
-        <div class="span5 offset1 asset">
-          <a href="page.html"><img class="img-polaroid" src="http://placehold.it/480x300"></a>
+        <div class="span6 offset1">
+          <a href="page.html"><img class="img-polaroid" src="http://placehold.it/570x452"></a>
         </div>
         <div class="span5 copy">
           <h1>Header</h1>
