placeholders for map and trend

--- a/chulavista.html
+++ b/chulavista.html
@@ -71,9 +71,13 @@
       </div>
 
       <div class="row-fluid section1">
-        <div class="span12 offset6">
+        <div class="span5">
           <a href="page.html"><img class="img-polaroid" src="http://placehold.it/480x300"></a>
         </div>
+        
+        <div class="span5 offset1">
+          <a href="page.html"><img class="img-polaroid" src="http://placehold.it/480x300"></a>
+        </div>        
       </div>
 
       </div>
