--- a/chulavista.html
+++ b/chulavista.html
@@ -66,18 +66,20 @@
 
       <div class="row-fluid section1">
         <div class="span6 offset1">
-          <a href="page.html"><img class="img-polaroid" src="http://placehold.it/570x452"></a>
+          <a href="#"><img class="img-polaroid" src="http://placehold.it/570x452"></a>
         </div>
       </div>
 
       <div class="row-fluid section1">
-        <div class="span5">
-          <a href="page.html"><img class="img-polaroid" src="http://placehold.it/480x300"></a>
-        </div>
+        <div class="span12">      
+          <div class="span5">
+            <a href="#"><img class="img-polaroid" src="http://placehold.it/480x300"></a>
+          </div>
         
-        <div class="span5 offset1">
-          <a href="page.html"><img class="img-polaroid" src="http://placehold.it/480x300"></a>
-        </div>        
+          <div class="span5 offset1">
+            <a href="#"><img class="img-polaroid" src="http://placehold.it/480x300"></a>
+          </div>        
+        </div>
       </div>
 
       </div>
