--- a/chulavista.html
+++ b/chulavista.html
@@ -64,13 +64,13 @@
           </div>
         </div>
 
-      <div class="row-fluid section1">
+      <div class="row-fluid">
         <div class="span6 offset1">
           <a href="#"><img class="img-polaroid" src="http://placehold.it/570x452"></a>
         </div>
       </div>
 
-      <div class="row-fluid section1">
+      <div class="row-fluid">
         <div class="span12">      
           <div class="span5">
             <a href="#"><img class="img-polaroid" src="http://placehold.it/480x300"></a>
