--- a/chulavista.html
+++ b/chulavista.html
@@ -42,22 +42,22 @@
 
 
 <div class="row-fluid">
-<div class="span5 actions">
-	<div class="span4">
+<div class="span4 actions">
+	<div class="span10 offset1">
             <div class="statistics">
-              <div class="span4">
+              <div class="span11">
                   <h2>Overall Regional Score Card</h2>
               </div>
-              <div class="span4">
+              <div class="span11">
                 <!-- linediv-l and linediv-r give dividing lines that look
                 different in horizontal and vertical layouts, illustrating
                 media queries. -->
                 <h3>Deaths</h3> <p>40 of 42</p>
               </div>
-              <div class="span4">
+              <div class="span11">
                   <h3>Hospitalizations</h3> <p>41 of 42</p>
               </div>
-              <div class="span4">
+              <div class="span11">
                 <h3>Emergency Room</h3> <p>42 of 42</p>
               </div>
             </div>
