--- a/chulavista.html
+++ b/chulavista.html
@@ -82,11 +82,6 @@
         </div>
       </div>
 
-      </div>
-      <div class="row-fluid footer">
-
-      </div>
-    </div>
-  
-
-</body></html>
+</body>
+	
+</html>
