--- a/chulavista.html
+++ b/chulavista.html
@@ -15,6 +15,40 @@
   	<link rel="stylesheet" href="style.css">
    	<link rel="stylesheet" href="bootstrap.min.css" >   
   	<link rel="stylesheet" href="bootstrap-2.3.2.css">
+  	
+  	
+  	<!--Load the AJAX API-->
+    	<script type="text/javascript" src="https://www.google.com/jsapi"></script>
+    	<script type="text/javascript">
+
+      	// Load the Visualization API and the piechart package.
+      	google.load('visualization', '1.0', {'packages':['corechart']});
+
+	// Set a callback to run when the Google Visualization API is loaded.
+	google.setOnLoadCallback(drawChart);
+	
+	// Create the data table.
+        var data = new google.visualization.DataTable();
+        data.addColumn('string', 'Topping');
+        data.addColumn('number', 'Slices');
+        data.addRows([
+          ['Mushrooms', 3],
+          ['Onions', 1],
+          ['Olives', 1],
+          ['Zucchini', 1],
+          ['Pepperoni', 2]
+        ]);
+
+        // Set chart options
+        var options = {'title':'How Much Pizza I Ate Last Night',
+                       'width':570,
+                       'height':452};
+
+        // Instantiate and draw our chart, passing in some options.
+        var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
+        chart.draw(data, options);
+      }
+    </script>
 
   </head>
   <body>
@@ -66,7 +100,10 @@
 
 
         <div class="span6 offset1">
-          <a href="#"><img class="img-polaroid" src="http://placehold.it/570x452"></a>
+          <a href="#">
+	    <!--Div that will hold the pie chart-->
+	    <div id="chart_div"></div>
+          </a>
         </div>
       </div>
 
