--- a/chulavista.html
+++ b/chulavista.html
@@ -38,11 +38,11 @@
         data.addColumn('string', 'Condition');
         data.addColumn('number', 'Percentage');
         data.addRows([
-          ['Cancer', 242.4],
-          ['CHD', 190.7],
-          ['COPD', 52.6],
-          ['Stroke', 40.5],
-          ['Diabetes', 38.0],
+          ['Cancer', 43.0],
+          ['CHD', 33.8],
+          ['COPD', 9.3],
+          ['Stroke', 7.2],
+          ['Diabetes', 6.7],
           ['Asthma', 0.0]
         ]);
 
@@ -52,7 +52,7 @@
                        'height':452};
 
         // Instantiate and draw our chart, passing in some options.
-        var chart = new google.visualization.BarChart(document.getElementById('chart_div'));
+        var chart = new google.visualization.ColumnChart(document.getElementById('chart_div'));
         chart.draw(data, options);
       }
     </script>
