--- a/chulavista.html
+++ b/chulavista.html
@@ -45,6 +45,15 @@
           ['Diabetes', 6.7],
           ['Asthma', 0.0]
         ]);
+        
+        
+      var view = new google.visualization.DataView(data);
+      view.setColumns([0, 1,
+                       { calc: "stringify",
+                         sourceColumn: 1,
+                         type: "string",
+                         role: "annotation" },
+                       2]);
 
         // Set chart options
         var options = {'title':'Pareto',
