--- a/chulavista.html
+++ b/chulavista.html
@@ -48,17 +48,13 @@
         
         
       var view = new google.visualization.DataView(data);
-      view.setColumns([0, 1,
-                       { calc: "stringify",
-                         sourceColumn: 1,
-                         type: "string",
-                         role: "annotation" },
-                       2]);
+
 
         // Set chart options
         var options = {'title':'Pareto',
                        'width':570,
-                       'height':452};
+                       'height':452
+                       'legend':{ position: "none" },};
 
         // Instantiate and draw our chart, passing in some options.
         var chart = new google.visualization.ColumnChart(document.getElementById('chart_div'));
