--- a/chulavista.html
+++ b/chulavista.html
@@ -52,7 +52,7 @@
         var options = {'title':'Pareto',
                        'width':570,
                        'height':452
-                       'legend':{ position: "none" },};
+                       'legend':{ position: "none" },;
 
         // Instantiate and draw our chart, passing in some options.
         var chart = new google.visualization.ColumnChart(document.getElementById('chart_div'));
