--- a/chulavista.html
+++ b/chulavista.html
@@ -110,11 +110,8 @@
 
 
         <div class="span6 offset1">
+ 	    <!--Div that will hold the chart-->       
          <div id="chart_div"></div>
-          <a href="#">
-	    <!--Div that will hold the pie chart-->
-	    
-          </a>
         </div>
       </div>
 
