--- a/chulavista.html
+++ b/chulavista.html
@@ -110,6 +110,7 @@
 
 
         <div class="span6 offset1">
+        <h2>Pareto Analysis</h2>
  	    <!--Div that will hold the chart-->       
          <div id="chart_div"></div>
         </div>
