--- a/chulavista.html
+++ b/chulavista.html
@@ -50,8 +50,7 @@
 
 
         // Set chart options
-        var options = {'title':'Pareto',
-                       'width':570,
+        var options = {'width':570,
                        'height':452
                        };
 
