--- a/chulavista.html
+++ b/chulavista.html
@@ -85,10 +85,10 @@
   <h1>Chula Vista</h1>
 
 
-<div class="row-fluid">
-<div class="span4 actions">
-	<div class="span10 offset1">
-            <div class="statistics">
+   <div class="row-fluid">
+	 <div class="span4 actions">
+	   <div class="span10 offset1">
+             <div class="statistics">
               <div class="span11">
                   <h2>Overall Regional Score Card</h2>
               </div>
@@ -112,23 +112,23 @@
         <div class="span6 offset1">
         <h2>Pareto Analysis</h2>
         
-        <ul class="nav nav-tabs">
-    <li><a href="#item1" data-toggle="tab">Home</a></li>
-    <li><a href="#item2" data-toggle="tab">Profile</a></li>
-    <li><a href="#item3" data-toggle="tab">Messages</a></li>
-    <li><a href="#item4" data-toggle="tab">Settings</a></li>
-</ul>
-<div class="tab-content">
-<div class="tab-pane active" id="item1">Content text 1 ...</div>
-<div class="tab-pane" id="item2">Content text 2 ...</div>
-<div class="tab-pane" id="item3">Content text 3 ...</div>
-<div class="tab-pane" id="item4">Content text 4 ...</div>
-</div>
-        
- 	    <!--Div that will hold the chart-->       
-         <div id="chart_div"></div>
+          <ul class="nav nav-tabs">
+  	    <li><a href="#item1" data-toggle="tab">Deaths</a></li>
+	    <li><a href="#item2" data-toggle="tab">Hospitalizations</a></li>
+    	    <li><a href="#item3" data-toggle="tab">Emergency</a></li>
+	  </ul>
+	
+	  <div class="tab-content">
+	    <div class="tab-pane active" id="item1">
+ 	      <!--Div that will hold the chart-->       
+              <div id="chart_div"></div>	  	
+	    </div>
+	    <div class="tab-pane" id="item2">Content text 2 ...</div>
+	    <div class="tab-pane" id="item3">Content text 3 ...</div>
+	  </div>
+
         </div>
-      </div>
+    </div>
 
       <div class="row-fluid">
         <div class="span12">      
