--- a/chulavista.html
+++ b/chulavista.html
@@ -49,9 +49,9 @@
         
 	// Create the data2 table.
         var data2 = new google.visualization.DataTable();
-        data.addColumn('string', 'Condition');
-        data.addColumn('number', 'Percentage');
-        data.addRows([
+        data2.addColumn('string', 'Condition');
+        data2.addColumn('number', 'Percentage');
+        data2.addRows([
           ['Cancer', 90.0],
           ['CHD', 33.8],
           ['COPD', 9.3],
