--- a/chulavista.html
+++ b/chulavista.html
@@ -74,7 +74,8 @@
 
         // Set chart options
         var options = {'width':650,
-                       'height':275
+                       'height':275,
+                       legend: { position: "none" },
                        };
                        
         // Set chart options2
