--- a/chulavista.html
+++ b/chulavista.html
@@ -80,12 +80,14 @@
                        
         // Set chart options2
         var options2 = {'width':650,
-                       'height':275
+                       'height':275,
+                       legend: { position: "none" },
                        };
 
         // Set chart options3
         var options3 = {'width':650,
-                       'height':275
+                       'height':275,
+                       legend: { position: "none" },
                        };
 
         // Instantiate and draw our chart, passing in some options.
