--- a/chulavista.html
+++ b/chulavista.html
@@ -96,6 +96,9 @@
                        legend: { position: "none" },
                        };
                        
+        // Set chart options4
+        var options4 = {
+                       };
 
         // Instantiate and draw our chart, passing in some options.
         var chart = new google.visualization.ColumnChart(document.getElementById('chart_div'));
