--- a/chulavista.html
+++ b/chulavista.html
@@ -77,6 +77,17 @@
           ['2011',  190.7,  40.5,  0.0,  52.6,  38.0,  242.4]
         ]);
 
+        var data5 = google.visualization.arrayToDataTable([
+          ['Year', 'CHD', 'Stroke', 'Asthma', 'COPD', 'Diabetes'],
+          ['2010',  657.8,  407.9,  92.9,  184.8,  271.6],
+          ['2011',  535.7,  345.1,  90.6,  170.8,  253.6]
+        ]);
+
+        var data6 = google.visualization.arrayToDataTable([
+          ['Year', 'CHD', 'Stroke', 'Asthma', 'COPD', 'Diabetes'],
+          ['2010',  49.5,  93.7,  720.3,  708.1,  282.0],
+          ['2011',  64.7,  115.6,  647.0,  742.8,  263.1]
+        ]);
 
         // Set chart options
         var options = {'width':650,
@@ -99,6 +110,14 @@
         // Set chart options4
         var options4 = {
                        };
+                       
+        // Set chart options4
+        var options5 = {
+                       };
+                       
+        // Set chart options4
+        var options6 = {
+                       };
 
         // Instantiate and draw our chart, passing in some options.
         var chart = new google.visualization.ColumnChart(document.getElementById('chart_div'));
@@ -115,6 +134,14 @@
         // Instantiate and draw our chart, passing in some options.      
         var chart4 = new google.visualization.LineChart(document.getElementById('chart_div4'));
         chart4.draw(data4, options4);
+
+        // Instantiate and draw our chart, passing in some options.      
+        var chart5 = new google.visualization.LineChart(document.getElementById('chart_div5'));
+        chart5.draw(data5, options5);
+
+        // Instantiate and draw our chart, passing in some options.      
+        var chart6 = new google.visualization.LineChart(document.getElementById('chart_div6'));
+        chart6.draw(data6, options6);
       }
     </script>
 
@@ -213,6 +240,14 @@
 	      <div class="tab-pane active" id="item4">
  	        <!--Div that will hold the chart-->       
                 <div id="chart_div4" style="width: 480px; height: 300px;"></div>	  	
+	      </div>
+	      <div class="tab-pane active" id="item5">
+ 	        <!--Div that will hold the chart-->       
+                <div id="chart_div5" style="width: 480px; height: 300px;"></div>	  	
+	      </div>
+	      <div class="tab-pane active" id="item6">
+ 	        <!--Div that will hold the chart-->       
+                <div id="chart_div6" style="width: 480px; height: 300px;"></div>	  	
 	      </div>
 	    </div>
 	  
