--- a/chulavista.html
+++ b/chulavista.html
@@ -241,11 +241,11 @@
  	        <!--Div that will hold the chart-->       
                 <div id="chart_div4" style="width: 480px; height: 300px;"></div>	  	
 	      </div>
-	      <div class="tab-pane active" id="item5">
+	      <div class="tab-pane" id="item5">
  	        <!--Div that will hold the chart-->       
                 <div id="chart_div5" style="width: 480px; height: 300px;"></div>	  	
 	      </div>
-	      <div class="tab-pane active" id="item6">
+	      <div class="tab-pane" id="item6">
  	        <!--Div that will hold the chart-->       
                 <div id="chart_div6" style="width: 480px; height: 300px;"></div>	  	
 	      </div>
