--- a/index.html
+++ b/index.html
@@ -20,77 +20,65 @@
   <body>
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <div class="container">
 
 <div class="navbar-wrapper">
       <div class="container">
-
-<div class="navbar navbar-inverse">
-	<div class="navbar navbar-inverse navbar-fixed-top">
-            <ul class="nav">
+	<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <ul class="nav">
 		<li>
-          	<a href="index.html"><b>LWSD</b></a>
+          	<a href="index.html"><b>LiveWell San Diego</b></a>
         	</li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
         	<li>
-          	<a href="#">About</a>
+          	<a href="#map">Explore</a>
         	</li>
+          <li>
+            <a href="scorecard.html">Regional scorecards</a>
+          </li>
+          <li>
+            <a href="overall.html">Overall standings</a>
+          </li>
+          </ul>
 	   </ul>
 	</div>
-      </div>
+      </div>  </div>
+
+<div class="text-center">
+  <div class="container">
+  <h1>Using data for better health in San Diego</h1>
+  <p class="bkgdlead">3 - 4 - 50</p>
+  
+  <div class="col-lg-4">
+    <h2>3 behaviors</h2>
+    <img src="http://placehold.it/200x200" />
+    <p>Poor diet - Physical inactivity - Smoking</p>
+  </div>
+  <div class="col-lg-4">
+    <h2>4 chronic diseases</h2>
+    <img src="http://placehold.it/200x200" />
+    <p>Cancer - heart disease/stroke - asthma/COPD - Type 2 diabetes</p>
+  </div>
+  <div class="col-lg-4">
+    <h2>50% of deaths</h2>
+    <img src="http://placehold.it/200x200" />
+    <p>Worldwide</p>
+  </div>
+</div>
+</div>
 
 
 
-      <div class="row-fluid section1">
-        <div class="span5 offset1 asset">
-          <a href="page.html"><img class="img-polaroid" src="http://placehold.it/480x300"></a>
-        </div>
-        <div class="span5 copy">
-          <h1>Header</h1>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
-          </p>
-        </div>
-      </div>
+ 
+<h2 class="text-center">Explore health data in San Diego</h2>
+<!--insert swipe map here-->
 
-      <div class="row-fluid section1">
-        <div class="span5 offset1 asset">
-          <a href="page.html"><img class="img-polaroid" src="http://placehold.it/480x300"></a>
-        </div>
-        <div class="span5 copy">
-          <h1>Header</h1>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
-          </p>
-        </div>
-      </div>
+<div class="text-center">
+<a class="btn btn-lg btn-warning" href="scorecard.html" role="button">How did your region do?</a>
+</div>
 
-      </div>
-      <div class="row-fluid footer">
-        <div class="span12">
-          <p>Copyright © 2014 MedFire</p>
-        </div>
-      </div>
-    </div>
+
+
   
 
 </body></html>
