update nav for chulavista.html

--- a/chulavista.html
+++ b/chulavista.html
@@ -155,18 +155,28 @@
       <div class="container">
 
 
-	<div class="navbar navbar-inverse navbar-fixed-top">
-            <ul class="nav">
-		<li>
-          	<a href="index.html"><b>LWSD</b></a>
-        	</li>
-        	<li>
-          	<a href="#">About</a>
-        	</li>
-	   </ul>
-	</div>
+  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <ul class="nav">
+    <li>
+            <a href="index.html"><b>LiveWell San Diego</b></a>
+          </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <a href="#map">Explore</a>
+          </li>
+          <li>
+            <a href="scorecard.html">Regional scorecards</a>
+          </li>
+          <li>
+            <a href="overall.html">Overall standings</a>
+          </li>
+          </ul>
+     </ul>
+  </div>
+      </div>  </div>
 
-      
+<div class="container">
   <h1>Chula Vista</h1>
 
 
@@ -253,7 +263,7 @@
 	  
           </div>        
         </div>
-      </div>
+      </div></div></div>
 
 </body>
 	
