update style.css and index.html intro

--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
 </div>
 </div>
 
+<div class="lead intro">
+<p>Chronic diseases are now the major cause of death and disability worldwide, having surpassed infectious diseases and injuries. Three behaviors contribute to four chronic diseases that cause over 50% of all deaths worldwide, a concept known as 3-4-50.</p>
+<p>In 2007 within San Diego County, the 3-4-50 diseases caused 57% of deaths and cost $4 billion in direct treatment.</p>
+</div>
+
+
 
 
  
