--- a/SanDiegoCO.html
+++ b/SanDiegoCO.html
@@ -127,6 +127,7 @@
 
         // Set chart options
         var options = {'width':1200,
+        	       'height':5000,
                        legend: { position: "none" },
                        };
                        
