--- a/SanDiegoCO.html
+++ b/SanDiegoCO.html
@@ -210,6 +210,7 @@
 
 
    <div class="row-fluid">
+    <div id="main-pareto">
         
           <ul class="nav nav-tabs">
   	    <li><a href="#item1" data-toggle="tab">Deaths</a></li>
@@ -231,7 +232,7 @@
               <div id="chart_div3"></div>	    	
 	    </div>
 	  </div>
-
+     </div>
     </div>
 
       <div class="row-fluid">
