--- a/SanDiegoCO.html
+++ b/SanDiegoCO.html
@@ -210,8 +210,7 @@
 
 
    <div class="row-fluid">
-    <div id="main-pareto">
-        
+
           <ul class="nav nav-tabs">
   	    <li><a href="#item1" data-toggle="tab">Deaths</a></li>
 	    <li><a href="#item2" data-toggle="tab">Hospitalizations</a></li>
@@ -219,9 +218,11 @@
 	  </ul>
 	
 	  <div class="tab-content">
+	   <div class="main-pareto">
 	    <div class="tab-pane active" id="item1">
  	      <!--Div that will hold the chart-->       
-              <div id="chart_div"></div>	  	
+              <div id="chart_div"></div>
+             </div> 
 	    </div>
 	    <div class="tab-pane" id="item2">
  	      <!--Div that will hold the chart-->       
@@ -232,7 +233,7 @@
               <div id="chart_div3"></div>	    	
 	    </div>
 	  </div>
-     </div>
+
     </div>
 
       <div class="row-fluid">
