added hospital data

--- a/SanDiegoCO.html
+++ b/SanDiegoCO.html
@@ -88,11 +88,49 @@
         data2.addColumn('string', 'Condition');
         data2.addColumn('number', 'Rate');
         data2.addRows([
-          ['CHD', 38.4],
-          ['Stroke', 24.7],
-          ['Diabetes', 18.2],
-          ['COPD', 12.2],
-          ['Asthma', 6.5]
+	['National City',	1458.3],
+	['Chula Vista',	1395.9],
+	['Anza-Borrego Springs',	1392.8],
+	['Harbison Crest/El Cajon**',	1377.5],
+	['La Mesa',	1275.3],
+	['Mountain Empire',	1269.7],
+	['Alpine',	1180.8],
+	['South Bay',	1059.0],
+	['Southeast SD',	1056.2],
+	['Fallbrook',	1034.0],
+	['Santee',	965.3],
+	['Jamul',	961.4],
+	['Lemon Grove',	938.3],
+	['Central SD',	930.9],
+	['Oceanside',	905.7],
+	['El Cajon',	902.9],
+	['Vista',	827.0],
+	['Kearny Mesa',	821.4],
+	['Mid-City',	820.5],
+	['San Diego County',	812.8],
+	['Lakeside',	805.5],
+	['Escondido',	780.6],
+	['Ramona',	725.3],
+	['Elliott-Navajo',	723.5],
+	['Spring Valley',	703.5],
+	['North SD',	702.5],
+	['San Marcos',	684.1],
+	['Coastal',	661.8],
+	['Coronado',	660.1],
+	['Pauma',	630.4],
+	['Carlsbad',	598.2],
+	['Valley Center',	571.2],
+	['San Dieguito',	570.1],
+	['Poway',	502.9],
+	['Laguna-Pine Valley',	460.7],
+	['Del Mar-Mira Mesa',	426.5],
+	['Sweetwater',	396.8],
+	['Peninsula',	393.3],
+	['University',	350.5],
+	['Palomar-Julian',	342.3],
+	['Miramar',	0.0],
+	['Pendleton',	0.0],
+
         ]);       
         
 	// Create the data3 table.
