add mp div to all paretos

--- a/SanDiegoCO.html
+++ b/SanDiegoCO.html
@@ -264,12 +264,16 @@
               </div> 
 	    </div>
 	    <div class="tab-pane" id="item2">
- 	      <!--Div that will hold the chart-->       
-              <div id="chart_div2"></div>	    	
+	      <div class="main-pareto">	 	    
+ 	       <!--Div that will hold the chart-->       
+               <div id="chart_div2"></div>
+              </div>
 	    </div>
 	    <div class="tab-pane" id="item3">
- 	      <!--Div that will hold the chart-->       
-              <div id="chart_div3"></div>	    	
+	      <div class="main-pareto">	 	    
+ 	       <!--Div that will hold the chart-->       
+               <div id="chart_div3"></div>
+              </div>
 	    </div>
 	  </div>
 
