shortend to el cajon

--- a/SanDiegoCO.html
+++ b/SanDiegoCO.html
@@ -42,7 +42,7 @@
 	['Anza-Borrego Springs',	792.8],
 	['La Mesa',	631.8],
 	['Chula Vista',	564.2],
-	['Harbison Crest/El Cajon**',	539.2],
+	['El Cajon**',	539.2],
 	['Fallbrook',	432.4],
 	['Kearny Mesa',	423.9],
 	['National City',	401.8],
@@ -91,7 +91,7 @@
 	['National City',	1458.3],
 	['Chula Vista',	1395.9],
 	['Anza-Borrego Springs',	1392.8],
-	['Harbison Crest/El Cajon**',	1377.5],
+	['El Cajon**',	1377.5],
 	['La Mesa',	1275.3],
 	['Mountain Empire',	1269.7],
 	['Alpine',	1180.8],
@@ -143,7 +143,7 @@
 	['Southeast SD',	1446.9],
 	['South Bay',	1204.8],
 	['Central SD',	1132.2],
-	['Harbison Crest/El Cajon**',	1086.2],
+	['El Cajon**',	1086.2],
 	['La Mesa',	995.2],
 	['Vista',	979.0],
 	['Mid-City',	966.9],
