--- a/index.html
+++ b/index.html
@@ -28,7 +28,40 @@
 		<li>
           	<a href="index.html"><b>LiveWell San Diego</b></a>
         	</li>
-        </ul>
+    <li class="dropdown">
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Explore your region's health</a>
+    <div class="dropdown-menu multi-column">
+      <div class="container-fluid">
+        <div class="row-fluid">
+          <div class="span3">
+            <ul class="dropdown-menu">
+              <li><a href="#">Col 1 - Opt 1</a></li>
+              <li><a href="#">Col 1 - Opt 2</a></li>
+            </ul>
+          </div>
+          <div class="span3">
+            <ul class="dropdown-menu">
+              <li><a href="#">Col 2 - Opt 1</a></li>
+              <li><a href="#">Col 2 - Opt 2</a></li>
+            </ul>
+          </div>
+          <div class="span3">
+            <ul class="dropdown-menu">
+              <li><a href="#">Col 2 - Opt 1</a></li>
+              <li><a href="#">Col 2 - Opt 2</a></li>
+            </ul>
+          </div>
+          <div class="span3">
+            <ul class="dropdown-menu">
+              <li><a href="#">Col 2 - Opt 1</a></li>
+              <li><a href="#">Col 2 - Opt 2</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </li>
+ </ul>
         <ul class="nav navbar-nav navbar-right">
         	<li>
           	<a href="#map">Explore</a>
@@ -80,7 +113,7 @@
 <!--insert swipe map here-->
 
 <div class="text-center">
-<a class="btn btn-lg btn-warning" href="scorecard.html" role="button">How did your region do?</a>
+<a class="btn btn-lg btn-warning" href="scorecard.html" role="button">How did your region stack up?</a>
 </div>
 
 
