--- a/SanDiegoCO.html
+++ b/SanDiegoCO.html
@@ -27,13 +27,13 @@
 
 	// Set a callback to run when the Google Visualization API is loaded.
 	google.setOnLoadCallback(drawChart);
-	
-	
+
+
 	// Callback that creates and populates a data table,
         // instantiates the pie chart, passes in the data and
         // draws it.
         function drawChart() {
-	
+
 	// Create the data table.
         var data = new google.visualization.DataTable();
         data.addColumn('string', 'Condition');
@@ -225,37 +225,41 @@
           }
         }
         
-        
         // Instantiate and draw our chart, passing in some options.
         var chart2 = new google.visualization.BarChart(document.getElementById('chart_div2'));
         chart2.draw(data2, options2);      
 
         function selectHandler() {
-          var selectedItem = chart2.getSelection()[0];
+          var selectedItem = chart.getSelection()[0];
           if (selectedItem) {
             var topping = data2.getValue(selectedItem.row, 0);
             window.location.assign('https://rawgithub.com/AnitaYCheng/myrepo/master/chulavista.html');
           }
         }
 
-
         // Instantiate and draw our chart, passing in some options.
         var chart3 = new google.visualization.BarChart(document.getElementById('chart_div3'));
         chart3.draw(data3, options3);   
  
         function selectHandler() {
-          var selectedItem = chart3.getSelection()[0];
+          var selectedItem = chart.getSelection()[0];
           if (selectedItem) {
             var topping = data3.getValue(selectedItem.row, 0);
             window.location.assign('https://rawgithub.com/AnitaYCheng/myrepo/master/chulavista.html');
           }
         }
-
  
         // Instantiate and draw our chart, passing in some options.      
         var chart4 = new google.visualization.LineChart(document.getElementById('chart_div4'));
         chart4.draw(data4, options4);
 
+        // Instantiate and draw our chart, passing in some options.      
+        var chart5 = new google.visualization.LineChart(document.getElementById('chart_div5'));
+        chart5.draw(data5, options5);
+
+        // Instantiate and draw our chart, passing in some options.      
+        var chart6 = new google.visualization.LineChart(document.getElementById('chart_div6'));
+        chart6.draw(data6, options6);
       }
     </script>
 
@@ -291,7 +295,7 @@
 	    <li><a href="#item2" data-toggle="tab">Hospitalizations</a></li>
     	    <li><a href="#item3" data-toggle="tab">Emergency</a></li>
 	  </ul>
-	
+
 	  <div class="tab-content">
 
 	    <div class="tab-pane active" id="item1">
@@ -323,5 +327,5 @@
       </div>
 
 </body>
-	
+
 </html>
