--- a/SanDiegoCO.html
+++ b/SanDiegoCO.html
@@ -225,6 +225,10 @@
           }
         }
         
+        google.visualization.events.addListener(chart, 'select', selectHandler);    
+         chart.draw(data, options);
+        }
+        
         // Instantiate and draw our chart, passing in some options.
         var chart2 = new google.visualization.BarChart(document.getElementById('chart_div2'));
         chart2.draw(data2, options2);      
