add updated nav to sandiegoco.html

--- a/SanDiegoCO.html
+++ b/SanDiegoCO.html
@@ -272,26 +272,95 @@
   <body>
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <div class="container">
 
 <div class="navbar-wrapper">
       <div class="container">
+	<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <ul class="nav">
+		  <li>
+        <a href="index.html"><img class="logo" src="LWSD_CMYK_BT_H.png" /></a>
+      </li>
+  </ul>
+    <ul class="nav navbar-nav navbar-right">
+        	    <li class="dropdown">
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Explore your region's health</a>
+    <div class="dropdown-menu multi-column">
+      <div class="container-fluid">
+        <div class="row-fluid">
+          <div class="span3">
+            <ul class="dropdown-menu">
+              <li><a href="#">Alpine</a></li>
+              <li><a href="#">Anza-Borrego Springs</a></li>
+              <li><a href="#">Carlsbad</a></li>
+              <li><a href="#">Central SD</a></li>
+              <li><a href="chulavista.html">Chula Vista</a></li>
+              <li><a href="#">Coastal</a></li>
+              <li><a href="#">Coronado</a></li>
+              <li><a href="#">Del Mar-Mira Mesa</a></li>
+              <li><a href="#">El Cajon</a></li>
+              <li><a href="#">Elliott-Navajo</a></li>
+              <li><a href="#">Escondido</a></li>
 
-
-	<div class="navbar navbar-inverse navbar-fixed-top">
-            <ul class="nav">
-		<li>
-          	<a href="index.html"><b>LWSD</b></a>
+            </ul>
+          </div>
+          <div class="span3">
+            <ul class="dropdown-menu">
+             <li><a href="#">Fallbrook</a></li>
+              <li><a href="#">Harbison-Crest/El Cajon</a></li>
+              <li><a href="#">Jamul</a></li>
+              <li><a href="#">Kearny Mesa</a></li>
+              <li><a href="#">La Mesa</a></li>
+              <li><a href="#">Laguna-Pine Valley</a></li>
+              <li><a href="#">Lakeside</a></li>
+              <li><a href="#">Lemon Grove</a></li>
+              <li><a href="#">Mid-City</a></li>
+              <li><a href="#">Miramar</a></li>
+            </ul>
+          </div>
+          <div class="span3">
+            <ul class="dropdown-menu">
+              <li><a href="#">Mountain Empire</a></li>
+              <li><a href="#">National City</a></li>
+              <li><a href="#">North SD</a></li>
+              <li><a href="#">Oceanside</a></li>
+              <li><a href="#">Palomar-Julian</a></li>
+              <li><a href="#">Pauma</a></li>
+              <li><a href="#">Pendleton</a></li>
+              <li><a href="#">Peninsula</a></li>
+              <li><a href="#">Poway</a></li>
+              <li><a href="#">Ramona</a></li>
+          </ul>
+          </div>
+          <div class="span3">
+            <ul class="dropdown-menu">
+              <li><a href="#">San Dieguito</a></li>
+              <li><a href="#">San Marcos</a></li>
+              <li><a href="#">Santee</a></li>
+              <li><a href="#">South Bay</a></li>
+              <li><a href="#">Southeast SD</a></li>
+              <li><a href="#">Spring Valley</a></li>
+              <li><a href="#">Sweetwater</a></li>
+              <li><a href="#">University</a></li>
+              <li><a href="#">Valley Center</a></li>
+              <li><a href="#">Vista</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </li>
+  <li>
+          	<a href="index.html#map">Map comparisons</a>
         	</li>
-        	<li>
-          	<a href="#">About</a>
-        	</li>
-	   </ul>
+   
+ </ul>
+</ul>
 	</div>
+      </div>  </div>
 
       
 
-
+<div class="container">
 
    <div class="row-fluid">
        <h1>San Diego County Pareto</h1>
