update call to actions in chulavista.html

--- a/chulavista.html
+++ b/chulavista.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"><head>
     <meta charset="utf-8">
-    <title>Chula Vista</title>
+    <title>Chula Vista | Live Well San Diego</title>
     
     <!-- Bootstrap -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -40,7 +40,7 @@
         data.addColumn('number', 'Percentage');
         data.addRows([
           ['Cancer', 43.0],
-          ['CHD', 33.8],
+          ['Heart Disease', 33.8],
           ['COPD', 9.3],
           ['Stroke', 7.2],
           ['Diabetes', 6.7],
@@ -52,7 +52,7 @@
         data2.addColumn('string', 'Condition');
         data2.addColumn('number', 'Percentage');
         data2.addRows([
-          ['CHD', 38.4],
+          ['Heart Disease', 38.4],
           ['Stroke', 24.7],
           ['Diabetes', 18.2],
           ['COPD', 12.2],
@@ -68,23 +68,23 @@
           ['Asthma', 35.3],
           ['Diabetes', 14.4],
           ['Stroke', 6.3],
-          ['CHD', 3.5]
+          ['Heart disease', 3.5]
         ]);   
         
         var data4 = google.visualization.arrayToDataTable([
-          ['Year', 'CHD', 'Stroke', 'Asthma', 'COPD', 'Diabetes', 'Cancer'],
+          ['Year', 'Heart disease', 'Stroke', 'Asthma', 'COPD', 'Diabetes', 'Cancer'],
           ['2010',  188.3,  49.5,  0.0,  52.9,  43.4,  246.5],
           ['2011',  190.7,  40.5,  0.0,  52.6,  38.0,  242.4]
         ]);
 
         var data5 = google.visualization.arrayToDataTable([
-          ['Year', 'CHD', 'Stroke', 'Asthma', 'COPD', 'Diabetes'],
+          ['Year', 'Heart disease', 'Stroke', 'Asthma', 'COPD', 'Diabetes'],
           ['2010',  657.8,  407.9,  92.9,  184.8,  271.6],
           ['2011',  535.7,  345.1,  90.6,  170.8,  253.6]
         ]);
 
         var data6 = google.visualization.arrayToDataTable([
-          ['Year', 'CHD', 'Stroke', 'Asthma', 'COPD', 'Diabetes'],
+          ['Year', 'Heart disease', 'Stroke', 'Asthma', 'COPD', 'Diabetes'],
           ['2010',  49.5,  93.7,  720.3,  708.1,  282.0],
           ['2011',  64.7,  115.6,  647.0,  742.8,  263.1]
         ]);
@@ -242,7 +242,7 @@
 
 
 <div class="container">
-  <h1>Chula Vista</h1>
+  <h1>Chula Vista Health Stats</h1>
 
 
    <div class="row-fluid">
@@ -272,6 +272,9 @@
           </div>
         </div>
       </div>
+
+
+
 
     <div class="row-fluid">
 
@@ -303,6 +306,7 @@
 
         </div>
     </div>
+    <p class="caption">COPD = Chronic obstructive pulmonary disease, which includes chronic bronchitis and emphysema.</p>
 
       <div class="row-fluid">
         <div class="span12">      
@@ -335,6 +339,7 @@
           </div>        
         </div>
       </div>
+          <p class="caption">COPD = Chronic obstructive pulmonary disease, which includes chronic bronchitis and emphysema.</p>
 
 <div class="row-fluid">
         <div class="span12">      
@@ -342,16 +347,15 @@
             <h2>What you can do</h2>
             <ul class="list-unstyled list-cta">
               <li>Get educated
-                <ul><li>Read more about cancer and chronic heart disease</li>
+                <ul><li>Read more about <a href="http://www.cdc.gov/cancer/">cancer</a> and <a href="http://www.cdc.gov/heartdisease/"> heart disease</a></li>
               </li></ul>
               <li>Increase your physical activity
-                <ul><li>Take more public transportation</li>
-                  <li>Find a nearby park or gym</li>
-                  <li>Find a physical education class:</li>
-                  <li>Join a physical activity meetup</li>
+                <ul><li>Take more <a href="http://www.sdmts.com/tripplanner.asp">public transportation</a></li>
+                  <li>Find a nearby <a href="http://www.chulavistaca.gov/City_Services/Community_Services/Public_Works_Operations/Parks/default.asp">park</a> or <a href="http://www.yelp.com/search?cflt=gyms&find_loc=Chula+Vista%2C+San+Diego%2C+CA">gym</a></li>
+                  <li>Join a <a href="http://www.meetup.com/find/events/fitness/?radius=50&userFreeform=Chula+Vista%2C+California%2C+USA&mcId=c91909&eventFilter=mysugg">physical activity group on Meetup.com</a></li>
                 </ul></li>
               <li>Improve your diet
-                <ul><li>Look up your closest supermarket or farmer's market</li></li></ul>
+                <ul><li>Look up your closest <a href="http://www.yelp.com/search?cflt=grocery&find_loc=Chula+Vista%2C+CA">supermarket</a> or <a href="http://www.ci.chula-vista.ca.us/Events/downtownFarmersMarket.asp">farmer's market</a></li></li></ul>
                 </li>
 
 
@@ -363,6 +367,7 @@
 Chula Vista, CA 91910<br/>
 Phone: 619-422-5963<br/>
 Fax: 619-422-7290<br/>
+Website: <a href="https://vargas.house.gov/">https://vargas.house.gov/</a>
 </address>
 
 
