added links and alerts

--- a/SanDiegoCO.html
+++ b/SanDiegoCO.html
@@ -225,7 +225,7 @@
                    window.location.assign('https://rawgithub.com/AnitaYCheng/myrepo/master/chulavista.html');
                  }
                  else {
-                   alert('Will provide ' + region + ' data with funding ;)  For now check out Chula Vista @ https://rawgithub.com/AnitaYCheng/myrepo/master/chulavista.html')	
+                   alert('Will provide ' + region + ' data with funding ;)  For now check out the Chula Vista demo by clicking that region')	
                  }
           }
         }
@@ -242,8 +242,13 @@
         function selectHandler2() {
           var selectedItem2 = chart2.getSelection()[0];
           if (selectedItem2) {
-            var topping = data2.getValue(selectedItem2.row, 0);
-            window.location.assign('https://rawgithub.com/AnitaYCheng/myrepo/master/chulavista.html');
+            	var region = data2.getValue(selectedItem2.row, 0);
+                 if (region == 'Chula Vista'){ 
+                   window.location.assign('https://rawgithub.com/AnitaYCheng/myrepo/master/chulavista.html');
+                 }
+                 else {
+                   alert('Will provide ' + region + ' data with funding ;)  For now check out the Chula Vista demo by clicking that region')	
+                 }
           }
         }
         
@@ -259,8 +264,13 @@
         function selectHandler3() {
           var selectedItem3 = chart3.getSelection()[0];
           if (selectedItem3) {
-            var topping = data3.getValue(selectedItem3.row, 0);
-            window.location.assign('https://rawgithub.com/AnitaYCheng/myrepo/master/chulavista.html');
+            	var region = data3.getValue(selectedItem3.row, 0);
+                 if (region == 'Chula Vista'){ 
+                   window.location.assign('https://rawgithub.com/AnitaYCheng/myrepo/master/chulavista.html');
+                 }
+                 else {
+                   alert('Will provide ' + region + ' data with funding ;)  For now check out the Chula Vista demo by clicking that region')	
+                 }
           }
         }
         
