--- a/chulavista.html
+++ b/chulavista.html
@@ -257,29 +257,32 @@
              <div id="this-carousel-id" class="carousel slide"><!-- class of slide for animation -->
   <div class="carousel-inner">
     <div class="item active"><!-- class of active since it's the first item -->
-      <img src="http://placehold.it/1200x480" alt="" />
+
       <div class="carousel-caption">
-        <p>Caption text here</p>
+              <div class="span11">
+                  <h2>Overall Score Card</h2>
+              </div>
+              <div class="span11">
+                <!-- linediv-l and linediv-r give dividing lines that look
+                different in horizontal and vertical layouts, illustrating
+                media queries. -->
+                <h3>Deaths</h3> <p>40 of 42</p>
+              </div>
+              <div class="span11">
+                  <h3>Hospitalizations</h3> <p>41 of 42</p>
+              </div>
+              <div class="span11">
+                <h3>Emergency Room Visits</h3> <p>42 of 42</p>
+              </div>
       </div>
     </div>
     <div class="item">
-      <img src="http://placehold.it/1200x480" alt="" />
+
       <div class="carousel-caption">
         <p>Caption text here</p>
       </div>
     </div>
-    <div class="item">
-      <img src="http://placehold.it/1200x480" alt="" />
-      <div class="carousel-caption">
-        <p>Caption text here</p>
-      </div>
-    </div>
-    <div class="item">
-      <img src="http://placehold.it/1200x480" alt="" />
-      <div class="carousel-caption">
-        <p>Caption text here</p>
-      </div>
-    </div>
+
   </div><!-- /.carousel-inner -->
   <!--  Next and Previous controls below
         href values must reference the id for this carousel -->
