--- a/chulavista.html
+++ b/chulavista.html
@@ -281,7 +281,14 @@
     <div class="item">
 
       <div class="carousel-caption">
-        <p>Caption text here</p>
+        <h3>Health Score Card</h3>
+        <p>40 of 42 Excercise at home (25.6%)</p>
+        <p>36 of 42 Presently controlling diet (36.2%)</p>
+        <p>36 of 42 Current Smokers (11.0%)</p>
+        <p>14 of 42 Overweight/Obese (65.6%)</p>
+        <p>22 of 42 Ate Fast Food 3+ Times per Week (18.9%)</p>
+        <p>35 of 42 Eats 5+ Servings of Fruits & Vegetables - Ages 2-11 (49.5%)</p>
+        <p>16 of 42 Physically Active 5+ Days for at least 1 Hour - Ages 5-11 (42.0%)</p>
       </div>
     </div>
 
