update index.html with icons and add map to chulavsta.html

--- a/index.html
+++ b/index.html
@@ -113,23 +113,23 @@
   
   <div class="col-lg-4">
     <h2>3 behaviors</h2>
-    <img src="http://placehold.it/300x200" />
+    <img src="LWSDhomepageicons_behavioricon.png" />
     <p>Poor diet - Physical inactivity - Smoking</p>
   </div>
   <div class="col-lg-4">
     <h2>4 chronic diseases</h2>
-    <img src="http://placehold.it/300x200" />
+    <img src="LWSDhomepageicons_diseaseicons.png" />
     <p>Cancer - heart disease/stroke - asthma/COPD - Diabetes</p>
   </div>
   <div class="col-lg-4">
     <h2>50% of deaths</h2>
-    <img src="http://placehold.it/300x200" />
+    <img src="LWSDhomepageicons_deathicon.png" />
     <p>Worldwide</p>
   </div>
 </div>
 </div>
 
-<div class="lead intro">
+<div class="lead intro well">
 <p>Chronic diseases are now the major cause of death and disability worldwide, having surpassed infectious diseases and injuries. Three behaviors contribute to four chronic diseases that cause over 50% of all deaths worldwide, a concept known as 3-4-50.</p>
 <p>In 2007 within San Diego County, the 3-4-50 diseases caused 57% of deaths and cost $4 billion in direct treatment.</p>
 <p>This website contains data made possible by the <a href="http://www.chcf.org/about">California Healthcare Foundation</a>,  <a href="http://www.chcf.org/projects/2012/free-the-data">CHCF's Free the Data Initiative</a>, <a href="http://www.sdcounty.ca.gov/hhsa/">San Diego County Health and Human Services Agency</a>, and <a href="http://www.livewellsd.org/">Live Well San Diego</a>. Visitors are welcome to explore the health of San Diego and all the regions within it.
