--- a/chulavista.html
+++ b/chulavista.html
@@ -246,10 +246,10 @@
 
 
    <div class="row-fluid">
-        <div class="span5">
-            <a href="#"><img class="img-polaroid" src="http://placehold.it/480x418"></a>
+        <div class="span8">
+            <iframe width="800" height="450" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://dianaeg2014.maps.arcgis.com/home/webmap/templates/OnePane/basicviewer/embed.html?webmap=943a54276f964eb5abd3a92cf8af50c2&amp;gcsextent=-117.4808,32.4762,-116.6376,32.8421&amp;displayslider=true&amp;displayscalebar=true&amp;displaylegend=true&amp;displaydetails=true&amp;displaybasemaps=true"></iframe>
           </div>
-	 <div class="span5 actions offset1">
+	 <div class="span4 actions">
 
 	   <div class="span10 offset1">
              <div class="statistics">
