--- a/chulavista.html
+++ b/chulavista.html
@@ -297,6 +297,10 @@
         href values must reference the id for this carousel -->
     <a class="carousel-control left" href="#this-carousel-id" data-slide="prev">&lsaquo;</a>
     <a class="carousel-control right" href="#this-carousel-id" data-slide="next">&rsaquo;</a>
+    <ol class="carousel-indicators">
+        <li data-target="#this-carousel-id" data-slide-to="0" class="active"></li>
+        <li data-target="#this-carousel-id" data-slide-to="1"></li>
+      </ol>
 </div><!-- /.carousel -->
 
             
