fiddling with index.html styling

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 <!--insert swipe map here-->
 
 <div class="text-center btn-cta">
-<a class="btn-lg btn-warning" href="SanDiegoCO.html" role="button">How did your region stack up?</a>
+<a class="btn-lg btn-warning" href="SanDiegoCO.html" role="button">How does your region stack up?</a>
 </div>
 
 
