--- a/SanDiegoCO.html
+++ b/SanDiegoCO.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"><head>
     <meta charset="utf-8">
-    <title>San Diego County</title>
+    <title>San Diego County Health Data</title>
     
     <!-- Bootstrap -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -384,7 +384,7 @@
 <div class="container">
 
    <div class="row-fluid">
-       <h1>San Diego County Pareto</h1>
+       <h1>San Diego County Health Data</h1>
           <ul class="nav nav-tabs">
   	    <li><a href="#item1" data-toggle="tab">Deaths</a></li>
 	    <li><a href="#item2" data-toggle="tab">Hospitalizations</a></li>
@@ -416,7 +416,7 @@
     </div>
 
       <div class="row-fluid">
-  	<h1>San Diego County Trend</h1>      
+  	<h1>San Diego County health data over time</h1>      
        	        <!--Div that will hold the chart-->       
                 <div id="chart_div4" style="width: 480px; height: 300px;"></div>
       </div>
