--- a/SanDiegoCO.html
+++ b/SanDiegoCO.html
@@ -303,6 +303,9 @@
       </li>
   </ul>
     <ul class="nav navbar-nav navbar-right">
+          <li>
+            <a href="SanDiegoCO.html">County-wide health data</a>
+          </li>
         	    <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Explore your region's health</a>
     <div class="dropdown-menu multi-column">
@@ -321,7 +324,6 @@
               <li><a href="#">El Cajon</a></li>
               <li><a href="#">Elliott-Navajo</a></li>
               <li><a href="#">Escondido</a></li>
-
             </ul>
           </div>
           <div class="span3">
@@ -370,7 +372,7 @@
       </div>
     </div>
   </li>
-  <li>
+          <li>
           	<a href="index.html#map">Map comparisons</a>
         	</li>
    
