--- a/chulavista.html
+++ b/chulavista.html
@@ -163,6 +163,9 @@
       </li>
   </ul>
     <ul class="nav navbar-nav navbar-right">
+       <li>
+            <a href="SanDiegoCO.html">County-wide health data</a>
+          </li>
               <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Explore your region's health</a>
     <div class="dropdown-menu multi-column">
