fixing typos in index.html

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   <div class="col-lg-4">
     <h2>4 chronic diseases</h2>
     <img src="LWSDhomepageicons_diseaseicons.png" />
-    <p>Cancer - heart disease/stroke - asthma/COPD - Diabetes</p>
+    <p>Cancer - Heart disease/stroke - Asthma/COPD - Diabetes</p>
   </div>
   <div class="col-lg-4">
     <h2>50% of deaths</h2>
