moved bootstrap jhs

--- a/chulavista.html
+++ b/chulavista.html
@@ -16,7 +16,8 @@
   	<link rel="stylesheet" href="style.css">
    	<link rel="stylesheet" href="bootstrap.min.css" >   
   	<link rel="stylesheet" href="bootstrap-2.3.2.css">
-  	
+ 
+     	<script src="bootstrap.min.js"></script> 	
   	
   	<!--Load the AJAX API-->
     	<script type="text/javascript" src="https://www.google.com/jsapi"></script>
@@ -151,7 +152,7 @@
   </head>
   <body>
     <script src="http://code.jquery.com/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+
     <div class="container">
 
 <div class="navbar-wrapper">
