reverting to older nav, but with caret

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
       </li>
   </ul>
     <ul class="nav navbar-nav navbar-right">
-        <li>
+                <li>
             <a href="SanDiegoCO.html">County-wide health data</a>
-        </li>
-    <div class="dropdown">
+          </li>
+        	    <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Explore your region's health  <b class="caret"></b></a>
-    <li class="dropdown-menu multi-column">
+    <div class="dropdown-menu multi-column">
       <div class="container-fluid">
         <div class="row-fluid">
           <div class="span3">
@@ -98,9 +98,8 @@
           </div>
         </div>
       </div>
-    </li>
     </div>
-
+  </li>
   <li>
           	<a href="#map">Map comparisons</a>
         	</li>
