css on sandiegoco.html

--- a/SanDiegoCO.html
+++ b/SanDiegoCO.html
@@ -386,8 +386,8 @@
 <div class="container">
 
    <div class="row-fluid">
-       <h1>San Diego County Health Data</h1>
-          <ul class="nav nav-tabs">
+       <h1>San Diego County Health Data (from 2011)</h1>
+          <ul class="nav nav-tabs data-tabs-main">
   	    <li><a href="#item1" data-toggle="tab">Deaths</a></li>
 	    <li><a href="#item2" data-toggle="tab">Hospitalizations</a></li>
     	    <li><a href="#item3" data-toggle="tab">Emergency</a></li>
