--- a/test.html
+++ b/test.html
@@ -42,6 +42,8 @@
   </head>
 
   <body>
+
+
 <html><head><meta charset="utf-8">
 <style>
 
@@ -172,5 +174,6 @@ d3.tsv("data.tsv", function(error, data) {
   }
 });
 </script>
+</html>
   </body>
 </html>
