--- a/test.html
+++ b/test.html
@@ -44,6 +44,7 @@
   <body>
 
 
+<iframe src="/mbostock/raw/3885705/8784f05689d2970e0c0a8235a28f2604590794cd/" marginwidth="0" marginheight="0" scrolling="no">
 <html><head><meta charset="utf-8">
 <style>
 
@@ -175,5 +176,6 @@ d3.tsv("data.tsv", function(error, data) {
 });
 </script>
 </html>
+</iframe>
   </body>
 </html>
