--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <style>
 
 .chart rect {
@@ -12,6 +12,7 @@
 }
 
 </style>
+<script src="http://d3js.org/d3.v3.min.js"></script>
 <svg class="chart" width="420" height="120">
   <g transform="translate(0,0)">
     <rect width="40" height="19"></rect>
