messing with access control

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </style>
 <script>
 var invocation = new XMLHttpRequest();
-var url = 'https://raw.github.com/andrewakagawa/myrepo/master/data.tsv';
+var url = 'https://render.github.com/';
    
 function callOtherDomain() {
   if(invocation) {    
