messing with access control

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ function makeCorsRequest() {
 
   xhr.send();
 }
-var url = 'http://rawgithub.com';
+var url = 'https://raw.github.com/andrewakagawa/myrepo/master/data.tsv';
 var xhr = createCORSRequest('GET', url);
 xhr.send();
    
