--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
 <svg class="chart"></svg>
-<script src="d3.v3.min.js"></script>
+<script src="https://d3js.org/d3.v3.min.js"></script>
 <script>
 
 
